# Sellna-The-Sales-Agent

./: .gitignore  README.md  SETUP.md
backend/: .env.example  BACKEND.md  main.py  pyproject.toml  requirements.txt  scraper_standalone.py
backend/app/agents/: README.md  __init__.py  cleaning_agent.py  competitor_agent.py  domain_agent.py  gap_analysis_agent.py  icp_agent.py  optimization_agent.py  outreach_agent.py  persona_agent.py  social_agent.py  web_agent.py
backend/app/api/: README.md  __init__.py  router.py
backend/app/api/v1/: __init__.py  analytics.py  auth.py  chat.py  company.py  competitors.py  dashboard.py  export.py  icp.py  outreach.py  personas.py  pipeline.py  scrapers.py  ui.py
backend/app/config/: README.md  __init__.py  settings.py
backend/app/core/: README.md  __init__.py  dependencies.py  logging.py  run_recorder.py  security.py  stream_manager.py
backend/app/db/: README.md  __init__.py  postgres.py  vector_store.py
backend/app/db/repositories/: __init__.py
backend/app/pipelines/: README.md  __init__.py  sales_pipeline.py
backend/app/schemas/: README.md  __init__.py  company.py  competitor.py  gap_analysis.py  icp.py  outreach.py  persona.py  social.py
backend/app/services/: README.md  __init__.py  embedding_service.py  llm_service.py  rag_service.py  scraping_service.py
backend/app/utils/: README.md  __init__.py  json_parse.py  similarity.py  text_cleaning.py
backend/app/workers/: README.md  __init__.py  celery_app.py  tasks.py
backend/scrapping_module/: README.md  __init__.py  social.py  stealth.py
backend/scrapping_module/engines/: README.md  __init__.py  base.py  instagram.py  linkedin.py
backend/scripts/: test_qdrant.py  verify_fix.py
backend/tests/: README.md  __init__.py  conftest.py  test_api_company.py  test_domain_agent.py  test_scraping_service.py  test_utils.py
backend/webscraper/: __init__.py  config.py  extractor.py  scraper.py
frontend/: .env.example  App.tsx  index.html  main.tsx  next.config.mjs  package-lock.json  (+4 more)
(+49 files in other folders)
