[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sellna-ai"
version = "0.1.0"
description = "Sales Agentic AI — multi-agent B2B sales intelligence platform"
requires-python = ">=3.11"
readme = "BACKEND.md"
dependencies = [
    # Web Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Async / Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # Vector Store
    "qdrant-client>=1.9.0",
    "faiss-cpu>=1.8.0",
    # LLM / Embeddings
    "openai>=1.30.0",
    "sentence-transformers>=2.7.0",
    # Scraping
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "brotli>=1.1.0",
    # Security / Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "email-validator>=2.1.0",
    # Logging
    "structlog>=24.1.0",
    "colorama>=0.4.6",
    # Task Queue
    "redis>=5.0.4",
    "celery>=5.4.0",
    "flower>=2.0.1",
    # Observability
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Export
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
]

[project.scripts]
dev = "main:main"

[tool.hatch.build.targets.wheel]
# All importable backend packages. The webscraper/ engine and the
# scrapping_module/ social scraper sit alongside the main app/ package.
packages = ["app", "webscraper", "scrapping_module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
